added pictures and title on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner mt-0">
+
+  <div class="container pt-4">
+
+    <h1>Welcome to Broomhill Holiday Cottages</h1>
+  </div>
+</div>
