--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,88 @@
 <div class="banner mt-0">
-
   <div class="container pt-4">
-
     <h1>Welcome to Broomhill Holiday Cottages</h1>
+    <p>
+      <span id="banner-typed-text"></span>
+    </p>
+  </div>
+</div>
+<div class="home-container container pt-5 text-center">
+  <h2>Short Breaks and Holidays on a Working Dairy Farm in Pembrokeshire</h2>
+  <%= image_tag 'broomhill_logo_mock_up.png', class: "logo mt-5 mb-5"  %>
+  <h3 class="mb-3">Family Friendly Self-Catered Cottages In the Heart of the Pembrokeshire Coast National Park</h3>
+  <p>Broomhill Cottages are the perfect spot for anyone looking to escape the hustle and bustle of every day life</p>
+  <p>Enjoy the fresh country side air from this remote farm located in the Pembrokeshire Coast National Park</p>
+  <p>Wonder the farm trail to the Estuary Edge and enjoy a picnic with your view</p>
+  <p>Pembrokeshire has plenty to keep you busy. And at the end of a busy day exploring, relax in our beautiful barn conversions with all the modern comforts</p>
+  <h4>FIND US ON</h4>
+
+
+  <div class="pictures">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
+      </ol>
+      <div class="carousel-inner" >
+        <div class="carousel-item active c-boat">
+        </div>
+        <div class="carousel-item c-fire">
+        </div>
+        <div class="carousel-item c-wine">
+        </div>
+        <div class="carousel-item c-sunset">
+        </div>
+         <div class="carousel-item c-kitchen">
+        </div>
+        <div class="carousel-item c-living-room">
+        </div>
+        <div class="carousel-item c-bedroom-one">
+        </div>
+        <div class="carousel-item c-bedroom-two">
+        </div>
+        <div class="carousel-item c-bathroom-one">
+        </div>
+        <div class="carousel-item c-track">
+        </div>
+        <div class="carousel-item c-estuary">
+        </div>
+        <div class="carousel-item c-frame">
+        </div>
+        <div class="carousel-item c-horses">
+        </div>
+        <div class="carousel-item c-night-fire">
+        </div>
+        <div class="carousel-item c-outside-wall">
+        </div>
+        <div class="carousel-item c-preselis">
+        </div>
+        <div class="carousel-item c-smootch">
+        </div>
+
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
 </div>
