--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,6 +10,12 @@ h3{
   color: grey;
 }
 
+h4{
+  font-family: 'Amatic SC', cursive;
+  font-size: 40px;
+  color: #ED254E;
+}
+
 p{
   color: grey;
 }
@@ -22,6 +28,10 @@ body{
 .logo{
   height: 80px;
   width: 80px;
+  &:hover{
+
+    margin-top: 8px;
+  }
 }
 
 .pictures{
@@ -106,9 +116,17 @@ body{
 
 .carousel-inner {
   height: 100vh;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
-
+.booking-link{
+  text-decoration: none;
+  &:hover{
+    text-decoration: none;
+  }
+}
 
 @media(max-width: 992px) {
   .carousel-inner {
