--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,11 +12,17 @@
   <h3 class="mb-3">Family Friendly Self-Catered Cottages In the Heart of the Pembrokeshire Coast National Park</h3>
   <p>Broomhill Cottages are the perfect spot for anyone looking to escape the hustle and bustle of every day life</p>
   <p>Enjoy the fresh country side air from this remote farm located in the Pembrokeshire Coast National Park</p>
-  <p>Wonder the farm trail to the Estuary Edge and enjoy a picnic with your view</p>
+  <p>Wonder the farm trail to the estuary edge and enjoy a picnic with your view</p>
   <p>Pembrokeshire has plenty to keep you busy. And at the end of a busy day exploring, relax in our beautiful barn conversions with all the modern comforts</p>
-  <h4>FIND US ON</h4>
-
-
+  <h4 class="mt-5">BOOK NOW</h4>
+  <p>
+    <a href="https://www.airbnb.co.uk/rooms/30230195?s=51" class="booking-link" target="_blank">
+      <%= image_tag 'airbnb.png', class: "logo mb-5"  %>
+    </a>
+    <a href="http://www.booking.com/Share-ysI9N2" class="booking-link" target="_blank">
+      <%= image_tag 'booking.png', class: "logo mb-5"   %>
+    </a>
+  </p>
   <div class="pictures">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -84,5 +90,11 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+  </div>
+
+  <div class="contact my-5">
+    <h4>CONTACT US</h4>
+    <p><strong>Email:</strong> info@broomhillcottages.com</p>
+    <p><strong>Tel:</strong> +44 7501 477020</p>
   </div>
 </div>
