meta info added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
   <h3 class="mb-3">Family Friendly Self-Catered Cottages In the Heart of the Pembrokeshire Coast National Park</h3>
   <p>Broomhill Cottages are the perfect spot for anyone looking to escape the hustle and bustle of every day life</p>
   <p>Enjoy the fresh country side air from this remote farm located in the Pembrokeshire Coast National Park</p>
-  <p>Wonder the farm trail to the estuary edge and enjoy a picnic with your view</p>
+  <p>Wander the farm trail to the estuary edge and enjoy a picnic with your view</p>
   <p>Pembrokeshire has plenty to keep you busy. And at the end of a busy day exploring, relax in our beautiful barn conversions with all the modern comforts</p>
   <h4 class="mt-5">BOOK NOW</h4>
   <p>
