--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,15 +1,11 @@
 .footer{
   width: 100vw;
   height: 80px;
-  background: #011936;
-  border-top: #ED254E solid 1px;
+  background: #E3E4DB;
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 0.4
 }
 
-.footer-logo{
-  height: 60px;
-  width: 60px;
 
-}
