--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
+
 <div class="banner mt-0">
+<%= image_tag 'broomhill_logo_mock_up.png', class: "logo "  %>
   <div class="container pt-4">
     <h1>Welcome to Broomhill Holiday Cottages</h1>
     <p>
@@ -7,8 +9,7 @@
   </div>
 </div>
 <div class="home-container container pt-5 text-center">
-  <h2>Short Breaks and Holidays on a Working Dairy Farm in Pembrokeshire</h2>
-  <%= image_tag 'broomhill_logo_mock_up.png', class: "logo mt-5 mb-5"  %>
+  <h2 class="mb-3">Short Breaks and Holidays on a Working Dairy Farm in Pembrokeshire</h2>
   <h3 class="mb-3">Family Friendly Self-Catered Cottages In the Heart of the Pembrokeshire Coast National Park</h3>
   <p>Broomhill Cottages are the perfect spot for anyone looking to escape the hustle and bustle of every day life</p>
   <p>Enjoy the fresh country side air from this remote farm located in the Pembrokeshire Coast National Park</p>
@@ -17,10 +18,10 @@
   <h4 class="mt-5">BOOK NOW</h4>
   <p>
     <a href="https://www.airbnb.co.uk/rooms/30230195?s=51" class="booking-link" target="_blank">
-      <%= image_tag 'airbnb.png', class: "logo mb-5"  %>
+      <%= image_tag 'airbnb.png', class: "booking-logo mb-5"  %>
     </a>
     <a href="http://www.booking.com/Share-ysI9N2" class="booking-link" target="_blank">
-      <%= image_tag 'booking.png', class: "logo mb-5"   %>
+      <%= image_tag 'booking.png', class: "booking-logo mb-5"   %>
     </a>
   </p>
   <div class="pictures">
