--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -32,3 +32,42 @@
     text-shadow: 0 1px 0 black;
   }
 }
+
+
+@media(max-width: 992px) {
+  .banner{
+    h1{
+      color:white;
+      text-align: center;
+      font-family: 'Amatic SC', cursive;
+      text-shadow: 0 1px 0 black;
+      font-size: 80px;
+      font-weight: bolder;
+    }
+    p{
+      color: white;
+      font-family: 'Amatic SC', cursive;
+      font-size: 40px;
+      text-shadow: 0 1px 0 black;
+    }
+  }
+}
+
+@media(max-width: 768px) {
+    .banner{
+    h1{
+      color:white;
+      text-align: center;
+      font-family: 'Amatic SC', cursive;
+      text-shadow: 0 1px 0 black;
+      font-size: 60px;
+      font-weight: bolder;
+    }
+    p{
+      color: white;
+      font-family: 'Amatic SC', cursive;
+      font-size: 30px;
+      text-shadow: 0 1px 0 black;
+    }
+  }
+}
