--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <div class="banner mt-0">
-<%= image_tag 'broomhill_logo_mock_up.png', class: "logo "  %>
+<%#= image_tag 'broomhill_logo_mock_up.png', class: "logo "  %>
   <div class="container pt-4">
     <h1>Welcome to Broomhill Holiday Cottages</h1>
     <p>
