changed footer color

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,11 @@
 .footer{
   width: 100vw;
   height: 80px;
-  background: #E3E4DB;
+  background: #0B032D;
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 0.4
+  border-top: #A4BFEB solid 7px;
 }
 
 
