--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,11 +10,11 @@
 </div>
 <div class="home-container container pt-5 text-center">
   <h2 class="mb-3">Short Breaks and Holidays on a Working Dairy Farm in Pembrokeshire</h2>
-  <h3 class="mb-3">Family Friendly Self-Catered Cottages In the Heart of the Pembrokeshire Coast National Park</h3>
-  <p>Broomhill Cottages are the perfect spot for anyone looking to escape the hustle and bustle of every day life</p>
-  <p>Enjoy the fresh country side air from this remote farm located in the Pembrokeshire Coast National Park</p>
-  <p>Wander the farm trail to the estuary edge and enjoy a picnic with your view</p>
-  <p>Pembrokeshire has plenty to keep you busy. And at the end of a busy day exploring, relax in our beautiful barn conversions with all the modern comforts</p>
+  <h3 class="mb-3">Family-friendly self-catered cottages in the heart of the Pembrokeshire Coast National Park</h3>
+  <p>Broomhill Cottages are the perfect spot for anyone looking to escape the hustle and bustle of every day life.</p>
+  <p>Enjoy the fresh countryside air from this remote farm located in the Pembrokeshire Coast National Park.</p>
+  <p>Wander the farm trail to the estuary edge and enjoy a picnic with your view.</p>
+  <p>Pembrokeshire has plenty to keep you busy. And at the end of a busy day exploring, relax in our beautiful barn conversions with all the modern comforts.</p>
   <h4 class="mt-5">BOOK NOW</h4>
   <p>
     <a href="https://www.airbnb.co.uk/rooms/30230195?s=51" class="booking-link" target="_blank">
